--- a/.github/workflows/android_test_builds.yml
+++ b/.github/workflows/android_test_builds.yml
@@ -71,12 +71,13 @@ jobs:
         
       - name: Start release apk build
         run: flutter build apk
+        
       - name: Releasing builds
-        uses: "marvinpinto/action-automatic-releases@1.2.1"
+        uses: "marvinpinto/action-automatic-releases@v1.2.1"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: true
-          automatic_release_tag: ${{ steps.version.outputs.content }}+${{ github.run_number }}
+          automatic_release_tag: "${{ steps.version.outputs.content }}+${{ github.run_number }}"
           files: |
             build/app/outputs/bundle/release/app-release.apk
             build/app/outputs/bundle/release/app-release.aab
