--- a/.github/workflows/android_test_builds.yml
+++ b/.github/workflows/android_test_builds.yml
@@ -66,15 +66,20 @@ jobs:
         
       - name: Start release apk build
         run: flutter build apk
-        
+
+  publish:
+    runs-on: ubuntu-latest
+    needs: build  
       - name: Releasing builds
-        uses: "marvinpinto/action-automatic-releases@v1.2.1"
+      - uses: "marvinpinto/action-automatic-releases@v1.2.1"
         with:
+          automatic_release_tag: "${{ jobs.build.steps.version.outputs.content }}"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: true
           files: |
             build/app/outputs/bundle/release/app-release.apk
             build/app/outputs/bundle/release/app-release.aab
+
   version:
     name: Create version number
     # The type of runner that the job will run on
