Build script fix

--- a/.github/workflows/android_test_builds.yml
+++ b/.github/workflows/android_test_builds.yml
@@ -69,7 +69,8 @@ jobs:
 
   publish:
     runs-on: ubuntu-latest
-    needs: build  
+    needs: build
+    steps:
       - name: Releasing builds
         uses: "marvinpinto/action-automatic-releases@v1.2.1"
         with:
