--- a/.github/workflows/android_test_builds.yml
+++ b/.github/workflows/android_test_builds.yml
@@ -25,6 +25,7 @@ jobs:
       
       - name: Create new file without newline char from version.txt
         run: tr -d '\n' < version.txt > version1.txt
+
       - name: Read version
         id: version
         uses: juliangruber/read-file-action@v1
@@ -85,11 +86,25 @@ jobs:
         uses: actions/download-artifact@v3
         with: 
           name: android-releases
+      - name: Get version.txt
+
+        uses: actions/download-artifact@v2
+        with:
+          name: gitversion
+
+      - name: Create new file without newline char from version.txt
+        run: tr -d '\n' < version.txt > version1.txt
+
+      - name: Read version
+        id: version
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: version1.txt
 
       - name: Releasing builds
         uses: "marvinpinto/action-automatic-releases@v1.2.1"
         with:
-          automatic_release_tag: "latest"
+          automatic_release_tag: "${{ steps.version.outputs.content }}"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: true
           files: |
@@ -105,7 +120,7 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
-      # 2
+
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v0.9.7
         with:
@@ -113,10 +128,10 @@ jobs:
       - name: Use GitVersion
         id: gitversion
         uses: gittools/actions/gitversion/execute@v0.9.7
-      # 3
-      - name: Create version.txt with nuGetVersion
-        run: echo ${{ steps.gitversion.outputs.nuGetVersion  }} > version.txt
-      # 4
+
+      - name: Create version.txt with MajorMinorPatch
+        run: echo ${{ steps.gitversion.outputs.MajorMinorPatch }} > version.txt
+
       - name: Upload version.txt
         uses: actions/upload-artifact@v2
         with:
