--- a/.github/workflows/android_test_builds.yml
+++ b/.github/workflows/android_test_builds.yml
@@ -68,14 +68,6 @@ jobs:
       - name: Start release apk build
         run: flutter build apk
 
-      - name: Upload Android Releases
-        uses: actions/upload-artifact@v2
-        with:
-          name: android-releases
-          path: |
-            build/app/outputs/bundle/release/app-release.aab
-            build/app/outputs/bundle/release/app-release.apk
-
   publish:
     runs-on: ubuntu-latest
     needs: [build, version]
@@ -86,8 +78,8 @@ jobs:
         uses: actions/download-artifact@v3
         with: 
           name: android-releases
-      - name: Get version.txt
 
+      - name: Get version.txt
         uses: actions/download-artifact@v2
         with:
           name: gitversion
@@ -104,12 +96,12 @@ jobs:
       - name: Releasing builds
         uses: "marvinpinto/action-automatic-releases@v1.2.1"
         with:
-          automatic_release_tag: "${{ steps.version.outputs.content }}"
+          automatic_release_tag: "v${{ steps.version.outputs.content }}"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: true
           files: |
-            app-release.apk
-            app-release.aab
+            build/app/outputs/bundle/apk/app-release.apk
+            build/app/outputs/bundle/release/app-release.aab
 
   version:
     name: Create version number
