--- a/.github/workflows/android_test_builds.yml
+++ b/.github/workflows/android_test_builds.yml
@@ -1,21 +1,21 @@
 name: Android Test Build
 
-# 1
+
 on:
 
-  # 3
+
   workflow_dispatch:
 
-# 4
+
 jobs:
-  # 5
+
   build:
-    # 6
+
     runs-on: ubuntu-latest
     needs: version
-    # 7
+
     steps:
-      # 8
+
       - uses: actions/checkout@v3
       
       - name: Get version.txt
@@ -54,19 +54,27 @@ jobs:
           distribution: 'zulu'
           java-version: "12.x"
           cache: 'gradle'
-      # 10   
+ 
       - uses: subosito/flutter-action@v2
         with:
-          # 11
+   
           channel: 'stable'
           cache: true
 
       # Runs a set of commands using the runners shell
-      - name: Start release appbundle build
+      - name: Start appbundle build
         run: flutter build appbundle
         
-      - name: Start release apk build
+      - name: Start apk build
         run: flutter build apk
+
+      - name: Upload builds
+        uses: actions/upload-artifact@v2
+        with:
+          name: builds
+          path: |
+            build/app/outputs/apk/release/app-release.apk
+            build/app/outputs/bundle/release/app-release.aab
 
   publish:
     runs-on: ubuntu-latest
@@ -77,7 +85,7 @@ jobs:
       - name: Downloading builds
         uses: actions/download-artifact@v3
         with: 
-          name: android-releases
+          name: builds
 
       - name: Get version.txt
         uses: actions/download-artifact@v2
@@ -100,8 +108,8 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: true
           files: |
-            build/app/outputs/apk/release/app-release.apk
-            build/app/outputs/bundle/release/app-release.aab
+            app-release.apk
+            app-release.aab
 
   version:
     name: Create version number
