--- a/.github/workflows/android_test_builds.yml
+++ b/.github/workflows/android_test_builds.yml
@@ -1,12 +1,12 @@
 name: Android Build
 
 on:
+  workflow_dispatch:
   push:
     tags:
       - v*
 
 jobs:
-
   build:
 
     runs-on: ubuntu-latest
