flutter_to_debian added to actions

--- a/.github/workflows/android_test_builds.yml
+++ b/.github/workflows/android_test_builds.yml
@@ -59,6 +59,15 @@ jobs:
           channel: 'stable'
           cache: true
 
+      - name: Get flutter_to_debian
+        run: dart pub global activate -s git https://github.com/iamalper/flutter_to_debian
+
+      - name: Start linux build
+        run: flutter build linux
+
+      - name: Run flutter_to_debian
+        run: flutter_to_debian
+        
       # Runs a set of commands using the runners shell
       - name: Start appbundle build
         run: flutter build appbundle
@@ -73,6 +82,7 @@ jobs:
           path: |
             build/app/outputs/apk/release/app-release.apk
             build/app/outputs/bundle/release/app-release.aab
+            build/linux/x64/release/debian/weepy_${{ steps.version.outputs.content }}_amd64.deb
 
   publish:
     runs-on: ubuntu-latest
@@ -106,8 +116,9 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: true
           files: |
-            apk/release/app-release.apk
-            bundle/release/app-release.aab
+            build/app/outputs/apk/release/app-release.apk
+            build/app/outputs/bundle/release/app-release.aab
+            build/linux/x64/release/debian/weepy_${{ steps.version.outputs.content }}_amd64.deb
 
   version:
     name: Create version number
