directory fix for build artifacts

--- a/debian/gui/file_sharer.desktop
+++ b/debian/gui/file_sharer.desktop
@@ -1,7 +1,7 @@
 [Desktop Entry]
 Version=0.1.0
-Name=file sharer
-GenericName=file sharer
+Name=Wifi transfer
+GenericName=wifi transfer
 Comment=Cross platform file sharing via local network.
 Terminal=false
 Type=Application
