--- a/.github/workflows/android_test_builds.yml
+++ b/.github/workflows/android_test_builds.yml
@@ -30,9 +30,15 @@ jobs:
         with:
           path: version1.txt
       
-      - name: Update version in YAML
+      - name: Update version in pubpsec.yaml
         run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
       
+      - name: Update version in debian.yaml
+        run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}/g' debian/debian.yaml
+
+      - name: Update version in wifi_transfer.desktop
+        run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}/g' debian/wifi_transfer.desktop
+
       - name: Download Android keystore
         id: android_keystore
         uses: timheuer/base64-to-file@v1.0.3
@@ -89,7 +95,7 @@ jobs:
           path: |
             build/app/outputs/apk/release/app-release.apk
             build/app/outputs/bundle/release/app-release.aab
-            build/linux/x64/release/debian/weepy_${{ steps.version.outputs.content }}_amd64.deb
+            build/linux/x64/release/debian/*.deb
 
   publish:
     runs-on: ubuntu-latest
@@ -125,7 +131,7 @@ jobs:
           files: |
             build/app/outputs/apk/release/app-release.apk
             build/app/outputs/bundle/release/app-release.aab
-            build/linux/x64/release/debian/weepy_${{ steps.version.outputs.content }}_amd64.deb
+            build/linux/x64/release/debian/*.deb
 
   version:
     name: Create version number
