--- a/.github/workflows/android_test_builds.yml
+++ b/.github/workflows/android_test_builds.yml
@@ -34,10 +34,10 @@ jobs:
         run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
       
       - name: Update version in debian.yaml
-        run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}/g' debian/debian.yaml
+        run: sed -i 's/99.99.99/${{ steps.version.outputs.content }}/g' debian/debian.yaml
 
       - name: Update version in wifi_transfer.desktop
-        run: sed -i 's/99.99.99+99/${{ steps.version.outputs.content }}/g' debian/gui/wifi_transfer.desktop
+        run: sed -i 's/99.99.99/${{ steps.version.outputs.content }}/g' debian/gui/wifi_transfer.desktop
 
       - name: Download Android keystore
         id: android_keystore
