--- a/.github/workflows/android_test_builds.yml
+++ b/.github/workflows/android_test_builds.yml
@@ -1,4 +1,4 @@
-name: Android Build
+name: BuildTask
 
 on:
   workflow_dispatch:
@@ -93,7 +93,7 @@ jobs:
         with:
           name: builds
           path: |
-            app/outputs/apk/release/app-release.apk
+            app/outputs/flutter-apk/release/app-release.apk
             app/outputs/bundle/release/app-release.aab
             linux/x64/release/debian/*.deb
 
@@ -129,7 +129,7 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: true
           files: |
-            build/app/outputs/apk/release/app-release.apk
+            build/app/outputs/flutter-apk/release/app-release.apk
             build/app/outputs/bundle/release/app-release.aab
             build/linux/x64/release/debian/*.deb
 
