Android label changed

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
       <uses-permission android:name="android.permission.INTERNET" />
 
    <application
-        android:label="Weep Transfer"
+        android:label="FileDrop"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher"
         android:roundIcon="@mipmap/ic_launcher_round"
