--- a/debian/gui/wifi_transfer.desktop
+++ b/debian/gui/wifi_transfer.desktop
@@ -1,10 +1,10 @@
 [Desktop Entry]
 Version=1.0.0
-Name=Wifi transfer
-GenericName=wifi transfer
+Name=FileDrop
+GenericName=FileDrop
 Comment=Cross platform file sharing via local network.
 Terminal=false
 Type=Application
 Categories=Utility;
-Keywords=Flutter;share;file;wifi;transfer;
+Keywords=Flutter;share;file;wifi;transfer;drop;
 Icon=wifi_transfer.png
