Windows app name & package updated

--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -89,13 +89,13 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "file_sharer" "\0"
+            VALUE "CompanyName", "com.alperr" "\0"
+            VALUE "FileDescription", "FileDrop" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "file_sharer" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "file_sharer.exe" "\0"
-            VALUE "ProductName", "file_sharer" "\0"
+            VALUE "InternalName", "FileDrop" "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2023 com.alperr. All rights reserved." "\0"
+            VALUE "OriginalFilename", "FileDrop" "\0"
+            VALUE "ProductName", "FileDrop" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
