--- a/debian/gui/FileDrop.desktop
+++ b/debian/gui/FileDrop.desktop
@@ -7,4 +7,4 @@ Terminal=false
 Type=Application
 Categories=Utility;
 Keywords=Flutter;share;file;wifi;transfer;drop;
-Icon=wifi_transfer.png
+Icon=FileDrop.png
