--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: '>=2.19.6 <3.0.0'
 
 dependencies:
+  network_discovery: ^1.0.0
   file_picker: ^5.3.0
   flutter:
     sdk: flutter
@@ -14,7 +15,6 @@ dependencies:
   http_parser: ^4.0.2
   media_store_plus: ^0.0.7
   mime: ^1.0.4
-  network_info_plus: ^4.0.0
   path: ^1.8.2
   path_provider: ^2.0.15
   permission_handler: ^10.2.0
@@ -23,7 +23,6 @@ dependencies:
   sqflite_common_ffi: ^2.2.5
   open_filex: ^4.3.2
   sqlite3_flutter_libs: ^0.5.15
-  network_tools: ^3.2.1
   shared_preferences: ^2.1.2
   lottie: ^2.4.0
   flutter_localizations:
@@ -31,13 +30,18 @@ dependencies:
   intl: any
   firebase_crashlytics: ^3.3.4
   firebase_core: ^2.15.0
+  settings_ui: ^2.0.2
+  package_info_plus: ^4.1.0
+  flutter_store_listing: ^0.3.0
+  url_launcher: ^6.1.12
+  firebase_remote_config: ^4.2.5
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  integration_test:
-    sdk: flutter
   flutter_lints: ^2.0.0
+  plugin_platform_interface: ^2.1.5
+  path_provider_platform_interface: ^2.1.0
 
 flutter:
   uses-material-design: true
