--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,6 @@ dependencies:
   file_picker: ^5.3.0
   flutter:
     sdk: flutter
-  http: ^0.13.6
   http_parser: ^4.0.2
   media_store_plus: ^0.0.7
   mime: ^1.0.4
@@ -35,6 +34,7 @@ dependencies:
   flutter_store_listing: ^0.3.0
   url_launcher: ^6.1.12
   firebase_remote_config: ^4.2.5
+  dio: ^5.3.2
 
 dev_dependencies:
   flutter_test:
