--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   url_launcher: ^6.1.12
   firebase_remote_config: ^4.2.5
   dio: ^5.3.2
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
