--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   firebase_remote_config: ^4.2.5
   dio: ^5.3.2
   http: ^1.1.0
+  flutter_riverpod: ^2.4.0
 
 dev_dependencies:
   flutter_test:
@@ -43,6 +44,8 @@ dev_dependencies:
   flutter_lints: ^2.0.0
   plugin_platform_interface: ^2.1.5
   path_provider_platform_interface: ^2.1.0
+  custom_lint: ^0.5.3
+  riverpod_lint: ^2.0.4
 
 flutter:
   uses-material-design: true
