--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -104,7 +104,7 @@ jobs:
 
   publish:
     env:
-      isRelease: ${{ github.ref_name == 'release' }}
+      isRelease: ${{ github.ref_name == 'main' }}
     runs-on: ubuntu-latest
     needs: [build, version]
     steps:
@@ -142,7 +142,7 @@ jobs:
 
   version:
     env:
-      isRelease: ${{ github.ref_name == 'release' }}
+      isRelease: ${{ github.ref_name == 'main' }}
     name: Create version number
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
@@ -161,7 +161,7 @@ jobs:
         uses: gittools/actions/gitversion/execute@v0.9.7
 
       - name: Create version.txt with MajorMinorPatch
-        run: echo ${{ steps.gitversion.outputs.MajorMinorPatch }} > version.txt
+        run: echo ${{ steps.gitversion.outputs.MajorMinorPatch }}${{ steps.gitversion.outputs.PreReleaseTagWithDash }} > version.txt
 
       - name: Upload version.txt
         uses: actions/upload-artifact@v2
