--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ on:
       - .github/**
 
 jobs:
-  build:
+  build_android:
 
     runs-on: ubuntu-latest
     needs: version
@@ -40,12 +40,6 @@ jobs:
       - name: Update version in pubpsec.yaml
         run: sed -i 's/1.0.0+1/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
       
-      - name: Update version in debian.yaml
-        run: sed -i 's/1.0.0/${{ steps.version.outputs.content }}/g' debian/debian.yaml
-
-      - name: Update version in FileDrop.desktop
-        run: sed -i 's/1.0.0/${{ steps.version.outputs.content }}/g' debian/gui/FileDrop.desktop
-
       - name: Download Android keystore
         id: android_keystore
         uses: timheuer/base64-to-file@v1.0.3
@@ -68,13 +62,58 @@ jobs:
  
       - uses: subosito/flutter-action@v2
         with:
-   
           channel: 'stable'
           cache: true
 
+      - name: Running flutter tests
+        run: flutter test
+  
+      - name: Start appbundle build
+        run: flutter build appbundle
+        
+      - name: Start apk build
+        run: flutter build apk
+
+      - name: Uploading android packages
+        uses: actions/upload-artifact@v2
+        with:
+          name: builds
+          path: |
+            build/app/outputs/flutter-apk/app-release.apk
+            build/app/outputs/bundle/release/app-release.aab
+
+  build_linux:
+    needs: [version]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      
+      - name: Get version.txt
+        uses: actions/download-artifact@v2
+        with:
+          name: gitversion
+      
+      - name: Create new file without newline char from version.txt
+        run: tr -d '\n' < version.txt > version1.txt
+
+      - name: Read version
+        id: version
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: version1.txt
+      
+      - name: Update version in pubpsec.yaml
+        run: sed -i 's/1.0.0+1/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
+        
+      - name: Update version in debian.yaml
+        run: sed -i 's/1.0.0/${{ steps.version.outputs.content }}/g' debian/debian.yaml
+
+      - name: Update version in FileDrop.desktop
+        run: sed -i 's/1.0.0/${{ steps.version.outputs.content }}/g' debian/gui/FileDrop.desktop
+
       - name: Get flutter_to_debian
         run: dart pub global activate -s git https://github.com/iamalper/flutter_to_debian
-      
+    
       - name: Preparing for linux build
         run: |
           sudo apt-get update -y
@@ -82,32 +121,69 @@ jobs:
 
       - run: flutter config --enable-linux-desktop
 
+      - name: Running flutter tests
+        run: flutter test
+
       - name: Start linux build
         run: flutter build linux
 
       - name: Run flutter_to_debian
         run: flutter_to_debian
 
-      - name: Start appbundle build
-        run: flutter build appbundle
-        
-      - name: Start apk build
-        run: flutter build apk
-
-      - name: Upload builds
+      - name: Upload deb package
         uses: actions/upload-artifact@v2
         with:
           name: builds
           path: |
-            build/app/outputs/flutter-apk/app-release.apk
-            build/app/outputs/bundle/release/app-release.aab
+            build/linux/x64/release/debian/*.deb
+
+  build_windows: #Not implemented
+    runs-on: windows-latest
+    if: false
+    steps:
+      - uses: actions/checkout@v3
+      - uses: subosito/flutter-action@v2
+        with:
+          channel: 'stable'
+      - uses: actions/checkout@v3
+      
+      - name: Get version.txt
+        uses: actions/download-artifact@v2
+        with:
+          name: gitversion
+      
+      - name: Create new file without newline char from version.txt
+        run: tr -d '\n' < version.txt > version1.txt
+
+      - name: Read version
+        id: version
+        uses: juliangruber/read-file-action@v1
+        with:
+          path: version1.txt
+      
+      - name: Update version in pubpsec.yaml
+        run: sed -i 's/1.0.0+1/${{ steps.version.outputs.content }}+${{ github.run_number }}/g' pubspec.yaml
+
+      - run: flutter config --enable-windows-desktop
+
+      - name: Running flutter tests
+        run: flutter test
+
+      - name: Build for windows
+        run: flutter build windows
+
+      - name: Upload exe
+        uses: actions/upload-artifact@v2
+        with:
+          name: builds
+          path: |
             build/linux/x64/release/debian/*.deb
 
   publish:
     env:
       isRelease: ${{ github.ref_name == 'main' }}
     runs-on: ubuntu-latest
-    needs: [build, version]
+    needs: [build_android, build_linux, version]
     steps:
       - uses: actions/checkout@v3
 
@@ -136,18 +212,17 @@ jobs:
           automatic_release_tag: "v${{ steps.version.outputs.content }}"
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: ${{ !env.isRelease }}
-          files: |
-            app/outputs/flutter-apk/app-release.apk
-            app/outputs/bundle/release/app-release.aab
-            linux/x64/release/debian/*.deb
+          files: | 
+            build/app/outputs/flutter-apk/app-release.apk
+            build/app/outputs/bundle/release/app-release.aab
+            build/linux/x64/release/debian/*.deb
 
   version:
     env:
       isRelease: ${{ github.ref_name == 'main' }}
     name: Create version number
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
-    # Steps represent a sequence of tasks that will be executed as part of the job
+
     steps:
       - uses: actions/checkout@v3
         with:
