--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,6 +12,7 @@ on:
       - GitVersion.yml
       - .vscode/**
       - .github/**
+      - whatsnew/*
 
 jobs:
   build_android:
@@ -186,7 +187,7 @@ jobs:
           path: |
             build/linux/x64/release/debian/*.deb
 
-  publish:
+  release:
     env:
       isRelease: ${{ github.ref_name == 'main' }}
     runs-on: ubuntu-latest
@@ -249,3 +250,23 @@ jobs:
         with:
           name: gitversion
           path: version.txt
+
+  google_play_publish:
+    runs-on: ubuntu-latest
+    if: ${{ github.ref_name == 'main' }}
+    needs: [release]
+    steps:
+    - name: Downloading builds
+      uses: actions/download-artifact@v3
+      with: 
+         name: builds
+
+    - name: Publishing
+      uses: r0adkll/upload-google-play@v1
+      with:
+        serviceAccountJsonPlainText: ${{ secrets.PLAY_SERVICE_ACCOUNT }}
+        packageName: com.alper.weepy
+        releaseFiles: bundle/release/app-release.aab
+        track: beta
+        whatsNewDirectory: whatsnew
+        changesNotSentForReview: true
