--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   http: ^1.1.0
   flutter_riverpod: ^2.4.0
   cupertino_icons: ^1.0.6
+  num_remap: ^1.0.1
 
 dev_dependencies:
   flutter_test:
