--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -82,6 +82,7 @@ jobs:
           path: |
             build/app/outputs/flutter-apk/app-release.apk
             build/app/outputs/bundle/release/app-release.aab
+          if-no-files-found: error
 
   build_linux:
     needs: [version]
@@ -142,6 +143,7 @@ jobs:
           name: builds
           path: |
             build/linux/x64/release/debian/*.deb
+          if-no-files-found: error
 
   build_windows: #Not implemented
     runs-on: windows-latest
@@ -185,13 +187,14 @@ jobs:
         with:
           name: builds
           path: |
-            build/linux/x64/release/debian/*.deb
+            build\windows\runner\Release\*.*
+          if-no-files-found: error
 
   release:
     env:
       isRelease: ${{ github.ref_name == 'main' }}
     runs-on: ubuntu-latest
-    needs: [build_android, build_linux, version]
+    needs: [build_android, build_linux, version, build_windows]
     steps:
       - uses: actions/checkout@v3
 
