build: windows zip source folder fix

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -206,7 +206,7 @@ jobs:
       - name: Zip windows folder
         uses: "vimtor/action-zip@v1.1"
         with:
-          files: windows/*
+          files: windows
           dest: windows.zip
 
       - name: Releasing builds
