Revert "build: fix deb path"
This reverts commit 4e1060e1a3242aa4dab6aa0ee388435e840be3f3.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -218,7 +218,7 @@ jobs:
           files: | 
             *.apk
             *.aab
-            linux/x64/release/debian/*.deb
+            linux/debian/*.deb
             windows.zip
 
   version:
