--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -218,7 +218,7 @@ jobs:
           files: | 
             *.apk
             *.aab
-            linux/debian/*.deb
+            *.deb
             windows.zip
 
   version:
