Revert "build: fix deb directory"
This reverts commit 8a85b18fda623cb31bf5217482e30a0f96628364.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -218,7 +218,7 @@ jobs:
           files: | 
             *.apk
             *.aab
-            *.deb
+            linux/debian/*.deb
             windows.zip
 
   version:
