--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  integration_test:
+    sdk: flutter
   flutter_lints: ^3.0.1
   plugin_platform_interface: ^2.1.5
   path_provider_platform_interface: ^2.1.0
@@ -54,3 +56,4 @@ flutter:
   generate: true
   assets:
     - "assets/lottie/"
+    - "assets/test_image.png"
