ci: :green_heart: windows build directory fix

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -178,7 +178,7 @@ jobs:
         with:
           name: windows
           path: |
-            build\windows\runner\Release
+            build\windows\x64\runner\Release
           if-no-files-found: error
 
   release:
