--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -63,8 +63,6 @@ jobs:
           channel: 'stable'
           cache: true
 
-      - name: Running flutter tests
-        run: flutter test
   
       - name: Start appbundle build
         run: flutter build appbundle
@@ -123,7 +121,7 @@ jobs:
       - run: flutter config --enable-linux-desktop
 
       - name: Running flutter tests
-        run: flutter test
+        run: flutter test integration_test
 
       - name: Start linux build
         run: flutter build linux
@@ -168,7 +166,7 @@ jobs:
       - run: flutter config --enable-windows-desktop
 
       - name: Running flutter tests
-        run: flutter test
+        run: flutter test integration_test
 
       - name: Build for windows
         run: flutter build windows
