--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -121,7 +121,7 @@ jobs:
       - run: flutter config --enable-linux-desktop
 
       - name: Running flutter tests
-        run: flutter test integration_test
+        run: xvfb-run flutter test integration_test
 
       - name: Start linux build
         run: flutter build linux
