--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   num_remap: ^1.0.1
   workmanager: ^0.5.2
+  flutter_local_notifications: ^16.2.0
 
 dev_dependencies:
   flutter_test:
