--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -40,6 +40,9 @@ android {
     ndkVersion flutter.ndkVersion
 
     compileOptions {
+        //flutter_local_notifications
+        coreLibraryDesugaringEnabled true
+        //------
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
@@ -93,4 +96,8 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:multidex:2.0.1'
+    //for flutter_local_notifications
+    coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.2.2'
+    implementation 'androidx.window:window:1.0.0'
+    implementation 'androidx.window:window-java:1.0.0'
 }
