--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: 'none'
 version: 1.0.0+1
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=3.2.0 <4.0.0'
 
 dependencies:
   network_discovery: ^1.0.0
@@ -39,6 +39,8 @@ dependencies:
   flutter_riverpod: ^2.4.0
   cupertino_icons: ^1.0.6
   num_remap: ^1.0.1
+  workmanager: ^0.5.2
+  flutter_local_notifications: ^16.2.0
 
 dev_dependencies:
   flutter_test:
